chore: setup repository configuration for CI and releases (#2)