@@ -1,9 +1,12 @@
 /*
 Copyright 2025 Google LLC
+
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at
+
     http://www.apache.org/licenses/LICENSE-2.0
+
 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -97,7 +100,7 @@ final class Adapter {
       serverSocket = new ServerSocket(port, DEFAULT_CONNECTION_BACKLOG, inetAddress);
       LOG.info("Local TCP server started on {}:{}", inetAddress, port);
 
-      executor = Executors.newVirtualThreadPerTaskExecutor();
+      executor = Executors.newCachedThreadPool();
 
       // Start accepting client connections.
       executor.execute(this::acceptClientConnections);
